--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # 
-baseurl: "https://e-gov.github.io/eidas-Connector"
+baseurl: "https://e-gov.github.io/eIDAS-Connector"
 viimatiMuudetud: '03.01.2018'
 
 defaults:
