--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 # 
+repo: "https://github.com/e-gov/eIDAS-Connector"
 baseurl: "https://e-gov.github.io/eIDAS-Connector"
 viimatiMuudetud: '03.01.2018'
 
